Mainlayout anasayfası düzenlendi version eklendi

--- a/bbt.service.notification-profile.ui/Shared/MainLayout.razor
+++ b/bbt.service.notification-profile.ui/Shared/MainLayout.razor
@@ -40,6 +40,7 @@
                     <RadzenContentContainer Name="main">
                         @Body
                     </RadzenContentContainer>
+                 
                 </ChildContent>
             </RadzenBody>
         </div>
@@ -68,7 +69,7 @@
         </RadzenSidebar>
         <RadzenFooter>
             <ChildContent>
-                <RadzenLabel Text="BurganBank, Copyright © 2022">
+                <RadzenLabel Text="BurganBank, Copyright © 2022  v1.01">
                 </RadzenLabel>
             </ChildContent>
         </RadzenFooter>
