Müşteri izinlerini çekecek yapının oluşturulması,SaveInbox eklenmesi

--- a/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
@@ -72,6 +72,7 @@
             <RadzenDataGridColumn TItem="Source" Property="KafkaUrl" Title="KafkaUrl" Width="160px" />
             <RadzenDataGridColumn TItem="Source" Property="KafkaCertificate" Title="KafkaCertificate" Width="160px" />
             <RadzenDataGridColumn TItem="Source" Property="ProductCodeId" Title="ProductCodeId" Visible="false" Width="160px" />
+                 <RadzenDataGridColumn TItem="Source" Property="SaveInbox" Title="SaveInbox" Visible="false" Width="160px" />
             <RadzenDataGridColumn TItem="Source" Property="ProductCodeName" Title="ProductCode" Width="160px" />
             <RadzenDataGridColumn TItem="Source" Property="DisplayType" Title="DisplayType" Width="160px">
 
