--- a/bbt.service.notification-profile.ui/Shared/MainLayout.razor
+++ b/bbt.service.notification-profile.ui/Shared/MainLayout.razor
@@ -2,76 +2,170 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Http
 @using Radzen.Blazor
-
-
-
+@using bbt.service.notification.ui.Pages.Authorize
+<PageTitle>bbt.service.notification.ui</PageTitle>
 @if (Theme != "default.css")
 {
     <link href="_content/Radzen.Blazor/css/@(Theme)" rel="stylesheet" />
 }
+<style>
+    
+     .loginCard {
+        width: 100% !important;
+        max-width: 100% !important;
+        flex: 0 0 100%;
+        height: 100%;
+    }
+</style>
 <RadzenDialog />
 <RadzenNotification />
 <RadzenTooltip />
 <RadzenContextMenu />
+<AuthorizeView>
+    <Authorized>
+        <BaseAuthorizeView>
+            <AuthorizedControl>
 
-        <RadzenHeader>
-            <ChildContent>
-                <div class="row justify-content-start align-items-center">
-                    <div class="col-6 d-flex align-items-center">
-                        <RadzenSidebarToggle Click="@(args => { sidebarExpanded = !sidebarExpanded; bodyExpanded = !bodyExpanded; })">
-                        </RadzenSidebarToggle>
-                       
-                    </div>
-                    <div class="col-6 d-flex align-items-center justify-content-end">
-                        <div class="d-none d-md-inline-flex align-items-center">
+
+                <RadzenHeader>
+                    <ChildContent>
+                        <div class="row justify-content-start align-items-center">
+                            <div class="col-6 d-flex align-items-center">
+                                <RadzenSidebarToggle Click="@(args => { sidebarExpanded = !sidebarExpanded; bodyExpanded = !bodyExpanded; })">
+                                </RadzenSidebarToggle>
+
+                            </div>
+                            <div class="col-6 d-flex align-items-center justify-content-end">
+                                <div class="d-none d-md-inline-flex align-items-center">
+                                </div>
+                                <div class="d-none d-md-inline-flex align-items-center">
+                                    <label class="d-none d-sm-inline-block" style="margin-left: 1rem">Theme:</label>
+                                    <RadzenDropDown style="margin:0 .5rem" TValue="string" TextProperty="Text" ValueProperty="Value" Data="@themes" Value="@ThemeState.CurrentTheme" Change="@ChangeTheme" />
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="d-none d-md-inline-flex align-items-center">
-                            <label class="d-none d-sm-inline-block" style="margin-left: 1rem">Theme:</label>
-                            <RadzenDropDown style="margin:0 .5rem" TValue="string" TextProperty="Text" ValueProperty="Value" Data="@themes" Value="@ThemeState.CurrentTheme" Change="@ChangeTheme" />
-                        </div>
-                      
-                    </div>
+                    </ChildContent>
+                </RadzenHeader>
+                <div style="width:100%">
+                    <RadzenBody @ref="@body0" @bind-Expanded="@bodyExpanded">
+                        <ChildContent>
+                            <RadzenContentContainer Name="main">
+                                @Body
+                            </RadzenContentContainer>
+
+                        </ChildContent>
+                    </RadzenBody>
                 </div>
-            </ChildContent>
-        </RadzenHeader>
-        <div style="width:100%">
-            <RadzenBody @ref="@body0" @bind-Expanded="@bodyExpanded">
-                <ChildContent>
-                    <RadzenContentContainer Name="main">
-                        @Body
-                    </RadzenContentContainer>
-                 
-                </ChildContent>
-            </RadzenBody>
+                <RadzenSidebar @ref="@sidebar0" @bind-Expanded="@sidebarExpanded">
+                    <ChildContent>
+                        <RadzenPanelMenu>
+                            @foreach (var category in examples)
+                            {
+                                <Authorized>
+
+                                    <RadzenPanelMenuItem @bind-Expanded="@category.Expanded" Text="@category.Name" Path="@category.Path" Icon="@category.Icon" />
+
+
+                                </Authorized>
+
+                            }
+                        </RadzenPanelMenu>
+                    </ChildContent>
+                </RadzenSidebar>
+                <RadzenFooter>
+                    <ChildContent>
+                        <RadzenLabel Text="BurganBank, Copyright © 2022  v1.01">
+                        </RadzenLabel>
+                    </ChildContent>
+                </RadzenFooter>
+
+            </AuthorizedControl>
+            <NotAuthorizedControl>
+
+                 <div class="col-6 loginCard" style="margin-left:30%;margin-top:10%">
+            <div class="card " style="width:45%;">
+                <div class="card-body" style="background-color:	#fcfcfc;height: 100%;">
+                    <div class="middle">
+
+                        <div class="row">
+                            <div class="col-2"></div>
+                            <p class="col-8 text-center">Bu sayfaya erişim için yetkiniz bulunmamaktadır.</p>
+                            <div class="col-2"></div>
+                        </div>
+                        
+                       
+                        <div class="row">
+                            <div class="col-4"></div>
+                            <RadzenButton Style="background-color:gray" Click="@(args => LogoutSite())" Text="Logout" class="col-4" />
+                            <div class="col-4"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
-        <RadzenSidebar @ref="@sidebar0" @bind-Expanded="@sidebarExpanded">
-            <ChildContent>
-                <RadzenPanelMenu>
-                    @foreach (var category in examples)
-                    {
-                     
-                          
-                                <RadzenPanelMenuItem @bind-Expanded="@category.Expanded" Text="@category.Name" Path="@category.Path" Icon="@category.Icon">
-                               @*     @if (category.Children != null)
-                                    {
-                                        @foreach (var example in category.Children)
-                                        {
-                                                    <RadzenPanelMenuItem Text="@example.Name" Path="@example.Path" Icon="@example.Icon" />
-                                           
-                                        }
-                                    }*@
-                                </RadzenPanelMenuItem>
-                         
-                    
-                    }
-                </RadzenPanelMenu>
-            </ChildContent>
-        </RadzenSidebar>
-        <RadzenFooter>
-            <ChildContent>
-                <RadzenLabel Text="BurganBank, Copyright © 2022  v1.01">
-                </RadzenLabel>
-            </ChildContent>
-        </RadzenFooter>
+
+         
+            </NotAuthorizedControl>
+
+
+
+        </BaseAuthorizeView>
+    </Authorized><NotAuthorized>
+        <div class="col-6 loginCard" style="margin-left:30%;margin-top:10%">
+            <div class="card " style="width:45%;">
+                <div class="card-body" style="background-color:	#fcfcfc;height: 100%;">
+                    <div class="middle">
+
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <p class="col-6 text-center">Yetkiniz yoktur.Login olmanız gerekmektedir.</p>
+                            <div class="col-3"></div>
+                        </div>
+                        
+                       
+                        <div class="row">
+                            <div class="col-4"></div>
+                            <RadzenButton Click="@(args => LoginSite())" Text="Login" class="col-4" />
+                            <div class="col-4"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        @*<div class="row">
+        <div class="col-lg-4 mb-4">
+        </div>
+        <div class="col-lg-4 mb-4">
+        <RadzenCard style="height: 100%;margin-bottom:1rem">
+        <div class="row">
+        <div class="col-4"></div>
+        <p  class="col-4 text-center">Yetkiniz yoktur. Login olmanız gerekmektedir.</p>
+        <div class="col-4"></div>
+        </div>
+        <div class="row">
+        <div class="col-4"></div>
+        <RadzenButton Click="@(args => LoginSite())" Text="Login" class="col-4" />
+        <div class="col-4"></div>
+        </div>
+
+
+        </RadzenCard>
+        </div>
+        <div class="col-lg-4 mb-4">
+        </div>*@
+        @* </div>*@
+    </NotAuthorized>
+</AuthorizeView>
+
+
+
+
+
+
+
+
 
 
