--- a/bbt.service.notification-profile.ui/Pages/Authorize/Logout.cshtml
+++ b/bbt.service.notification-profile.ui/Pages/Authorize/Logout.cshtml
@@ -20,7 +20,7 @@
                                                                 <div class="row" style="margin-left:23%;margin-top:35%">
                                                                    
                                                                     <div class="col-2"></div>
-                                                                    <p style="margin-top:50px;font-size:19px;" class="col-8 text-center ">Bu sayfaya erişim için yetkiniz bulunmamaktadır.</p>
+                                                                    <p style="margin-top:50px;font-size:19px;" class="col-8 text-center ">Erişim yetkiniz sonlanmıştır. Tekrar Login olmanız gerekmektedir.</p>
                                                                     <div class="col-2"></div>
                                                                 </div>
                                                                  
