--- a/bbt.service.notification-profile.ui/Pages/SourcePage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourcePage.razor
@@ -186,7 +186,7 @@
                    <RadzenCheckBox @bind-Value=@sourceModel.SaveInbox Style="margin-left:80px;"></RadzenCheckBox>
             </div>
         </div>
-        @if (appsetting == true)
+    @*    @if (appsetting == true)
         {
             <div class="row" style="margin-top:10px;">
                 <div class="col-md-2">
@@ -196,7 +196,7 @@
                     <RadzenCheckBox @bind-Value=@sourceModel.CheckDeploy></RadzenCheckBox>
                 </div>
             </div>
-        }
+        }*@
     </div>
     <hr />
     <div class="row" style="margin-left:2px;margin-top:20px;">
