--- a/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
@@ -50,11 +50,13 @@
     <RadzenDataGrid @ref=@grid AllowColumnResize="true" AllowSorting="true"  Style="margin-top:5px;"
                     Data="@sourceList" TItem="Source" ColumnWidth="300px"  PagerHorizontalAlign="HorizontalAlign.Center" >
         <Columns>
-              <RadzenDataGridColumn TItem="Source" Width="90px" Title="Release">
+             
+              <RadzenDataGridColumn TItem="Source" Width="90px" Title="Release" Visible="@appsetting">
                 <Template Context="item">
-                    <RadzenButton title="Release" Icon="add_task" Style="font-size:11pt;background-color:green" Click="@((args) =>ProdSave(item))"></RadzenButton>
+                    <RadzenButton title="Release" Icon="add_task" Style="font-size:11pt;background-color:green"  Click="@((args) =>ProdSave(item))"></RadzenButton>
                 </Template>
             </RadzenDataGridColumn>
+            
             <RadzenDataGridColumn TItem="Source" Width="90px" Title="Düzenle">
                 <Template Context="item">
                     <RadzenButton title="Düzenle" Icon="mode_edit_outline" Style="font-size:11pt" Click="()=>SourceEdit(item)"></RadzenButton>
