--- a/bbt.service.notification-profile.ui/Pages/SourcePage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourcePage.razor
@@ -108,6 +108,22 @@
             </div>
 
         </div>
+
+        <div class="row">
+            <div class="col-md-2">
+                <RadzenLabel Text="ProcessName"></RadzenLabel>
+            </div>
+            <div class="col-md-3">
+                <RadzenTextBox Style="width:245px" @bind-Value=@sourceModel.ProcessName></RadzenTextBox>
+            </div>
+            <div class="col-md-2">
+                <RadzenLabel Text="ProcessItemId" Style="margin-left:80px;"></RadzenLabel>
+            </div>
+            <div class="col-md-3">
+                <RadzenTextBox Style="width:245px;margin-left:80px;" @bind-Value=@sourceModel.ProcessItemId></RadzenTextBox>
+            </div>
+        </div>
+
         <div class="row" style="margin-top:10px;">
 
 
