font size changed

--- a/bbt.service.notification-profile.ui/Pages/SourcePage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourcePage.razor
@@ -223,7 +223,7 @@
         </div>
         <div class="row" style="margin-top:10px;">            
             <div class="col-md-5">
-                <RadzenLabel Text="AlwaysSend özelliği kullanıldığında müşteri izinleri kontrol edilmeden gönderim yapılır." Style="color:red;font-weight:bold;font-size:small" />
+                <RadzenLabel Text="AlwaysSend özelliği kullanıldığında müşteri izinleri kontrol edilmeden gönderim yapılır." Style="color:red;font-weight:bold;font-size:x-small" />
             </div>
         </div>
         @*    @if (appsetting == true)
