--- a/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourceListPage.razor
@@ -99,7 +99,7 @@
         </Columns>
     </RadzenDataGrid>
 </div>
-<bbt.service.notification.ui.Component.Modal.BaseModal Title="Source Ekle" Width="2000" Height="500" IsFullScreen="false" @ref="ModalSource">
+<bbt.service.notification.ui.Component.Modal.BaseModal Title="Source Kaydet" Width="2000" Height="500" IsFullScreen="false" @ref="ModalSource">
     <ChildContent>
         <SourcePage SourceId="@SourceId" sourceDetayModel="@sourceDetayModel" ListUpdate="ListUpdate"></SourcePage>
     </ChildContent>
