--- a/bbt.service.notification-profile.ui/Pages/SourcePage.razor
+++ b/bbt.service.notification-profile.ui/Pages/SourcePage.razor
@@ -15,13 +15,13 @@
                 <RadzenLabel Text="Title_TR"></RadzenLabel>
             </div>
             <div class="col-md-3">
-                <RadzenTextBox Style="width:245px" @bind-Value=@sourceModel.Title_TR></RadzenTextBox>
+                <RadzenTextBox Style="width:250px" @bind-Value=@sourceModel.Title_TR></RadzenTextBox>
             </div>
             <div class="col-md-2">
                 <RadzenLabel Text="Title_EN" Style="margin-left:80px;"></RadzenLabel>
             </div>
             <div class="col-md-3">
-                <RadzenTextBox Style="width:245px;margin-left:80px;" @bind-Value=@sourceModel.Title_EN></RadzenTextBox>
+                <RadzenTextBox Style="width:250px;margin-left:80px;" @bind-Value=@sourceModel.Title_EN></RadzenTextBox>
             </div>
         </div>
         <div class="row" style="margin-top:10px;">
@@ -35,7 +35,7 @@
                                 @bind-Value=@sourceModel.ParentId
                                 Data=@parentList
                                 TextProperty="Topic"
-                                ValueProperty="Id" Style="width:245px;" />
+                                ValueProperty="Id" Style="width:250px;" />
                 @*<RadzenNumeric Style="width:245px" @bind-Value=@sourceModel.ParentId></RadzenNumeric>*@
             </div>
             <div class="col-md-2">
@@ -51,11 +51,7 @@
                     <ValidationMessage For="() =>sourceModel.Topic"></ValidationMessage>
                 </div>
             </div>
-
         </div>
-
-
-
 
         <div class="row" style="margin-top:10px;">
             <div class="col-md-2">
@@ -68,7 +64,7 @@
                                 @bind-Value=@sourceModel.SmsServiceReference
                                 Data=@listContentSms
                                 TextProperty="contentfullpath"
-                                ValueProperty="contentfullpath" Style="width:245px;" />
+                                ValueProperty="contentfullpath" Style="width:250px;" />
 
             </div>
             <div class="col-md-2">
@@ -81,7 +77,7 @@
                                 @bind-Value=@sourceModel.EmailServiceReference
                                 Data=@listContentEmail
                                 TextProperty="contentfullpath"
-                                ValueProperty="contentfullpath" Style="width:245px;margin-left:80px;" />
+                                ValueProperty="contentfullpath" Style="width:250px;margin-left:80px;" />
 
             </div>
 
@@ -98,61 +94,84 @@
                                 @bind-Value=@sourceModel.PushServiceReference
                                 Data=@listContentPush
                                 TextProperty="contentfullpath"
-                                ValueProperty="contentfullpath" Style="width:245px;" />
+                                ValueProperty="contentfullpath" Style="width:250px;" />
             </div>
             <div class="col-md-2">
-                <RadzenLabel Text="ClientIdJsonPath" Style="margin-left:80px;"></RadzenLabel>
-            </div>
-            <div class="col-md-3">
-                <RadzenTextBox Style="width:245px;margin-left:80px;" @bind-Value=@sourceModel.ClientIdJsonPath></RadzenTextBox>
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="col-md-2">
-                <RadzenLabel Text="ProcessName"></RadzenLabel>
-                <RadzenLabel Text="*" Style="color:red;font-weight:bold" />
+                <RadzenLabel Text="ProcessName" Style="margin-left:80px;"></RadzenLabel>
             </div>
             <div class="col-md-3">
                 <div class="row">
-                    <RadzenTextBox Style="width:245px" @bind-Value=@sourceModel.ProcessName></RadzenTextBox>
+                    <RadzenLabel Text="*" Style="color:red;font-weight:bold;margin-left:29px;" />
+                    <RadzenTextBox Style="width:250px;margin-left:92px;margin-top:-20px;" @bind-Value=@sourceModel.ProcessName></RadzenTextBox>
                 </div>
-                <ValidationMessage For="() =>sourceModel.ProcessName"></ValidationMessage>
+                <div style="margin-left:80px;width:250px;">
+                    <ValidationMessage For="() =>sourceModel.ProcessName"></ValidationMessage>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="margin-top:10px;">
+            <div class="col-md-2">
+                <RadzenLabel Text="MessageDataJsonPath"></RadzenLabel>
+            </div>
+            <div class="col-md-3">
+                <div class="row">
+                    <RadzenLabel Text="*" Style="color:red;font-weight:bold;margin-left:-5px;" />
+                    <RadzenTextBox Style="width:250px;margin-top:-20px;margin-left:12px;" @bind-Value=@sourceModel.MessageDataJsonPath></RadzenTextBox>
+                </div>
+                <ValidationMessage For="() =>sourceModel.MessageDataJsonPath"></ValidationMessage>
+            </div>
+
+            <div class="col-md-2">
+                <RadzenLabel Text="MessageDataFieldType" Style="margin-left:80px;"></RadzenLabel>
+            </div>
+            <div class="col-md-3">
+                <RadzenDropDown AllowClear="true"
+                                AllowFiltering="true"
+                                FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                                @bind-Value=@sourceModel.MessageDataFieldType
+                                Data=@messageDataFieldTypeList
+                                TextProperty="Text"
+                                ValueProperty="Value" Style="margin-left:80px;width:250px;" />
+            </div>
+        </div>
+
+        <div class="row" style="margin-top:10px;">
+            <div class="col-md-2">
+                <RadzenLabel Text="ClientIdJsonPath"></RadzenLabel>
+            </div>
+            <div class="col-md-3">
+                <div class="row">
+                    <RadzenTextBox Style="width:250px;margin-left:12px;" @bind-Value=@sourceModel.ClientIdJsonPath></RadzenTextBox>
+                </div>
             </div>
             <div class="col-md-2">
                 <RadzenLabel Text="ProcessItemIdJsonPath" Style="margin-left:80px;"></RadzenLabel>
             </div>
             <div class="col-md-3">
-                <RadzenTextBox Style="width:245px;margin-left:80px;" @bind-Value=@sourceModel.ProcessItemId></RadzenTextBox>
+                <RadzenTextBox Style="width:250px;margin-left:80px;" @bind-Value=@sourceModel.ProcessItemId></RadzenTextBox>
             </div>
         </div>
 
         <div class="row" style="margin-top:10px;">
-
-
             <div class="col-md-2">
-
                 <RadzenLabel Text="KafkaUrl"></RadzenLabel>
-
             </div>
-
             <div class="col-md-3">
                 <div class="row">
                     <RadzenLabel Text="*" Style="color:red;font-weight:bold;margin-left:-100px;" />
-                    <RadzenTextBox Style="width:255px;margin-top:-20px;margin-left:12px;" @bind-Value=@sourceModel.KafkaUrl></RadzenTextBox>
+                    <RadzenTextBox Style="width:250px;margin-top:-20px;margin-left:12px;" @bind-Value=@sourceModel.KafkaUrl></RadzenTextBox>
                 </div>
                 <ValidationMessage For="() =>sourceModel.KafkaUrl"></ValidationMessage>
             </div>
+
             <div class="col-md-2">
-
                 <RadzenLabel Text="KafkaCertificate" Style="margin-left:80px;"></RadzenLabel>
-
             </div>
             <div class="col-md-3">
                 <div class="row">
                     <RadzenLabel Text="*" Style="color:red;font-weight:bold;margin-left:29px;" />
-                    <RadzenTextBox Style="width:255px;margin-left:92px;margin-top:-20px;" @bind-Value=@sourceModel.KafkaCertificate></RadzenTextBox>
+                    <RadzenTextBox Style="width:250px;margin-left:92px;margin-top:-20px;" @bind-Value=@sourceModel.KafkaCertificate></RadzenTextBox>
                 </div>
                 <div style="margin-left:80px;width:250px;">
                     <ValidationMessage For="() =>sourceModel.KafkaCertificate"></ValidationMessage>
@@ -174,13 +193,13 @@
                                 Data=@displayTipList
                                 TextProperty="Text"
                                 Change=@(args => DisplayTypeChange())
-                                ValueProperty="Value" Style="width:245px;" />
+                                ValueProperty="Value" Style="width:250px;" />
             </div>
             <div class="col-md-2">
                 <RadzenLabel Text="RetentationTime" Style="margin-left:80px;"></RadzenLabel>
             </div>
             <div class="col-md-3">
-                <RadzenNumeric Style="width:245px;margin-left:80px;" @bind-Value=@sourceModel.RetentationTime></RadzenNumeric>
+                <RadzenNumeric Style="width:250px;margin-left:80px;" @bind-Value=@sourceModel.RetentationTime></RadzenNumeric>
             </div>
 
         </div>
@@ -197,10 +216,10 @@
                                 @bind-Value=@sourceModel.ProductCodeId
                                 Data=@productCodeList
                                 TextProperty="ProductCodeName"
-                                ValueProperty="Id" Style="width:245px;" />
+                                ValueProperty="Id" Style="width:250px;" />
             </div>
             <div class="col-md-2">
-                <RadzenLabel Text="Inbox Kaydet" Style="margin-left:80px;width:245px;"></RadzenLabel>
+                <RadzenLabel Text="Inbox Kaydet" Style="margin-left:80px;width:250px;"></RadzenLabel>
             </div>
             <div class="col-md-3">
                 <RadzenCheckBox @bind-Value=@sourceModel.SaveInbox Style="margin-left:80px;"></RadzenCheckBox>
@@ -221,7 +240,7 @@
                 </RadzenCheckBoxList>
             </div>
         </div>
-        <div class="row" style="margin-top:10px;">            
+        <div class="row" style="margin-top:10px;">
             <div class="col-md-5">
                 <RadzenLabel Text="AlwaysSend özelliği kullanıldığında müşteri izinleri kontrol edilmeden gönderim yapılır." Style="color:red;font-weight:bold;font-size:x-small" />
             </div>
